Update minSdkVersion & targetSdkVersion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,20 +4,20 @@
     <string name="version_info">version2</string>
     <string name="url_scheme">http</string>
     <string name="url_host">mksdrive.herokuapp.com</string>
-    <string name="url_home">http://mksdrive.herokuapp.com/</string>
-    <string name="url_user">http://mksdrive.herokuapp.com/user/</string>
-    <string name="url_drive">http://mksdrive.herokuapp.com/drive/</string>
-    <string name="url_checkversion">http://mksdrive.herokuapp.com/user/checkversion/</string>
-    <string name="url_forgotpassword">http://mksdrive.herokuapp.com/user/forgotpassword/</string>
-    <string name="url_sendotp">http://mksdrive.herokuapp.com/user/sendotp/</string>
-    <string name="url_signin">http://mksdrive.herokuapp.com/user/signin/</string>
-    <string name="url_signout">http://mksdrive.herokuapp.com/user/signout/</string>
-    <string name="url_changepassword">http://mksdrive.herokuapp.com/user/changepassword/</string>
-    <string name="url_getprofile">http://mksdrive.herokuapp.com/user/getprofile/</string>
-    <string name="url_getdata">http://mksdrive.herokuapp.com/drive/getdata/</string>
-    <string name="url_senddata">http://mksdrive.herokuapp.com/drive/senddata/</string>
+    <string name="url_home">https://mksdrive.herokuapp.com/</string>
+    <string name="url_user">https://mksdrive.herokuapp.com/user/</string>
+    <string name="url_drive">https://mksdrive.herokuapp.com/drive/</string>
+    <string name="url_checkversion">https://mksdrive.herokuapp.com/user/checkversion/</string>
+    <string name="url_forgotpassword">https://mksdrive.herokuapp.com/user/forgotpassword/</string>
+    <string name="url_sendotp">https://mksdrive.herokuapp.com/user/sendotp/</string>
+    <string name="url_signin">https://mksdrive.herokuapp.com/user/signin/</string>
+    <string name="url_signout">https://mksdrive.herokuapp.com/user/signout/</string>
+    <string name="url_changepassword">https://mksdrive.herokuapp.com/user/changepassword/</string>
+    <string name="url_getprofile">https://mksdrive.herokuapp.com/user/getprofile/</string>
+    <string name="url_getdata">https://mksdrive.herokuapp.com/drive/getdata/</string>
+    <string name="url_senddata">https://mksdrive.herokuapp.com/drive/senddata/</string>
     <string name="url_play_store">https://play.google.com/store/apps/details?id=iitp.naman.mksdrive</string>
-    <string name="url_help">http://mksdrive.herokuapp.com/help/</string>
+    <string name="url_help">https://mksdrive.herokuapp.com/help/</string>
     <string name="title_activity_home">Home</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
